[package]
name = "Orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
winapi = { version = "0.3.9", features = ["winuser"] }
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Accessibility", "Win32_Graphics_Dwm", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
